Revert "Ensure tables render behind the fixed header." This was making the action buttons unreachable.
This reverts commit 7838fe0d48b75c90237f96dfc672d671bb64abdf.

--- a/src/styles.css
+++ b/src/styles.css
@@ -323,7 +323,6 @@ table {
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
-    z-index: -1;
 }
 th {
     text-align: left;
